src/test/deca/syntax/valid/SansObjet/AndExpr2-Multiple.deca
// Description:
//    Multiple And expressions.
//
// Results:
//    (void)
//
// Historique:
//    cree le 08/01/2022

{
        x && 3&& y;
}
