src/test/deca/syntax/invalid/SansObjet/AndExpr2-SingleCharacter.deca
// Description:
//    And expression with single '&' character instead of two.
//
// Results:
//    11:10 token recognition error at: '& '
//
// Historique:
//    cree le 08/01/2022

{
        x & y;
}
